# openhands-aci

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: lint.yml  py-intg-tests.yml  py-unit-tests.yml  pypi-release.yml
.openhands/microagents/: repo.md
agent_ide/: __init__.py
agent_ide/editor/: __init__.py  editor.py
dev_config/python/: .pre-commit-config.yaml
oh-viewer/: LICENSE  README.md  pyproject.toml  setup.py
oh-viewer/src/: __init__.py  cli.py  code_intelligence.py  core.py  documentation.py  language_support.py  type_analyzer.py
openhands_aci/: __init__.py
openhands_aci/editor/: __init__.py  editor.py  exceptions.py  file_cache.py  history.py  prompts.py  results.py  shell.py
openhands_aci/linter/: __init__.py  linter.py
openhands_aci/linter/impl/: python.py  treesitter.py  treesitter_compat.py
openhands_aci/utils/: logger.py  shell.py
tests/integration/: test_file_editor.py  test_oh_editor.py
tests/integration/editor/: __init__.py  conftest.py  test_basic_operations.py  test_error_handling.py  test_file_validation.py  test_memory_usage.py  test_peak_memory.py
tests/unit/: test_exceptions.py  test_file_validation.py  test_history.py  test_results_utils.py  test_shell_utils.py
tests/unit/editor/: test_file_cache.py
tests/unit/linter/: test_lint_diff.py  test_python_linter.py  test_treesitter_linter.py  test_visualize.py
