[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oh-viewer"
version = "0.1.0"
description = "A command line file viewer with code intelligence"
readme = "README.md"
authors = [{name = "OpenHands Team"}]
license = {text = "MIT"}
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "tree-sitter",
]

[project.scripts]
oh-viewer = "src.cli:cli"